重写合并机制